manifests/rclone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rclone
  namespace: rclone
spec:
  type: ClusterIP
  selector:
    app: rclone
  ports:
    - name: ui
      port: 5522
      targetPort: ui
    - name: api
      port: 5533
      targetPort: api
